fixing bookdetailsfragment and changing and adding stuffs on most of the layouts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">BookCase</string>
+    <string name="publishedIn">Published in %d</string>
+    <string name="pageLength">%s pages</string>
+    <string name="image_of_book_cover">Image of book cover</string>
 
 </resources>
